[gd_scene load_steps=6 format=3 uid="uid://bfm4sdaawsl1h"]

[ext_resource type="Script" path="res://scripts/capital_enemy.gd" id="1_6d1em"]
[ext_resource type="PackedScene" uid="uid://c2adget47swu4" path="res://scenes/prefabs/health.tscn" id="3_ujx2n"]
[ext_resource type="PackedScene" uid="uid://b5tpdgc5545oh" path="res://scenes/prefabs/overlap/hurtbox.tscn" id="4_bl6vc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2tgc"]
size = Vector2(31.0381, 44)

[sub_resource type="CircleShape2D" id="CircleShape2D_5qo1b"]
radius = 18.0

[node name="Enemy_cap" type="CharacterBody2D"]
collision_layer = 5
motion_mode = 1
script = ExtResource("1_6d1em")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t2tgc")

[node name="Sprite2D" type="Sprite2D" parent="CollisionPolygon2D"]

[node name="Proj_Position_Holder" type="Node2D" parent="."]

[node name="Proj_Position" type="Node2D" parent="Proj_Position_Holder"]
position = Vector2(0, -42)

[node name="Timer" type="Timer" parent="."]

[node name="health" parent="." instance=ExtResource("3_ujx2n")]
max_health = 30

[node name="Hurtbox" parent="." instance=ExtResource("4_bl6vc")]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_5qo1b")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_changed" from="health" to="." method="_on_health_health_changed"]
[connection signal="killed" from="health" to="." method="_on_health_killed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
